rgw/sal: get_notification() takes optional_yield

Fixes: https://tracker.ceph.com/issues/58231

Signed-off-by: Casey Bodley <cbodley@redhat.com>